<resources>
    <string name="app_name">LinearLayoutTask</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="russian">Russian</string>
    <string name="_3_hr">3 hr</string>
    <string name="_4_5">4.5</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="uk">UK</string>
    <string name="engineer">Engineer</string>
    <string name="ahmed_hassan">Ahmed hassan</string>
</resources>